[gd_scene load_steps=3 format=3 uid="uid://dsibcedq2xku1"]

[ext_resource type="Script" path="res://Scripts/recruit_card_script.gd" id="1_rd7kt"]
[ext_resource type="Theme" uid="uid://dfeo3ebchf3ul" path="res://Resources/Themes/Default_Theme.tres" id="3_nghnq"]

[node name="BuildCardUi" type="Node2D"]
script = ExtResource("1_rd7kt")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 64.0
offset_right = 256.0
offset_bottom = 692.0
color = Color(0.843184, 0.843184, 0.843184, 1)

[node name="Sprite2D" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 80.0
offset_right = 128.0
offset_bottom = 80.0
scale = Vector2(1.875, 1.0625)

[node name="UnitTittle" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 248.0
offset_bottom = 176.0
theme = ExtResource("3_nghnq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Unit name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price_TradeGood" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 176.0
offset_right = 128.0
offset_bottom = 199.0
theme = ExtResource("3_nghnq")
theme_override_colors/font_color = Color(1, 0.701961, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 8
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price_Resource" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 176.0
offset_right = 248.0
offset_bottom = 199.0
theme = ExtResource("3_nghnq")
theme_override_colors/font_color = Color(0.741385, 0.741385, 0.741385, 1)
theme_override_colors/font_outline_color = Color(0.393086, 0.393086, 0.393085, 1)
theme_override_constants/outline_size = 8
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UnitEffect" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 264.0
offset_right = 248.0
offset_bottom = 552.0
theme = ExtResource("3_nghnq")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Unit effect"
autowrap_mode = 3

[node name="Unit_STR" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 208.0
offset_right = 248.0
offset_bottom = 256.0
theme = ExtResource("3_nghnq")
theme_override_colors/font_color = Color(0.32549, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.596078, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 22
text = "STR"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RecruitButton" type="Button" parent="."]
texture_filter = 1
offset_left = 12.0
offset_top = 624.0
offset_right = 245.0
offset_bottom = 686.0
theme = ExtResource("3_nghnq")
theme_override_font_sizes/font_size = 16
text = "Recruit"

[connection signal="pressed" from="RecruitButton" to="." method="_on_recruit_button_pressed"]
